@@ -70,6 +70,9 @@ Release 1.1 (in development)
 * #259: HTML table rows now have even/odd CSS classes to enable
   "Zebra styling".
 
+* #367: Added automatic exclusion of hidden members in inheritance
+  diagrams, and an option to selectively enable it.
+
 * #306: Added :event:`env-get-outdated` event.
 
 * C++ domain now supports array definitions.
